Edits on html and css files made

--- a/algorithm.html
+++ b/algorithm.html
@@ -17,7 +17,7 @@
             <li>
                 <a href="#">Career Paths</a>
                 <ul class="dropdown">
-                    <li><a href="software.html">Software Developer</a>
+                    <li class="separation"><a href="software.html">Software Developer</a>
                         <ul>
                             <li>Software Engineer</li>
                             <li>Backend Engineer</li>
@@ -26,7 +26,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="ai.html">Machine Learning</a>
+                    <li class="separation"><a href="ai.html">Machine Learning</a>
                         <ul>
                             <li>AI Engineering</li>
                             <li>Data Scientist</li>
@@ -36,7 +36,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="cyber.html">Cyber Security</a>
+                    <li class="separation"><a href="cyber.html">Cyber Security</a>
                         <ul>
                             <li>Network Engineer</li>
                             <li>Cyber Security Analyst</li>
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="hardware.html">Embedded Systems</a>
+                    <li class="separation"><a href="hardware.html">Embedded Systems</a>
                         <ul>
                             <li>Embedded Systems Engineer</li>
                             <li>IoT Developer</li>
@@ -55,7 +55,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="game.html">Game Development</a>
+                    <li class="separation"><a href="game.html">Game Development</a>
                         <ul>
                             <li>Game Developer</li>
                             <li>Grpahics Programmer</li>
@@ -64,7 +64,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="signal.html">Signal Processing</a>
+                    <li class="separation"><a href="signal.html">Signal Processing</a>
                         <ul>
                             <li>DSP Engineer</li>
                             <li>Speech Recognition Engineer</li>
@@ -72,7 +72,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="data.html">Data Engineering</a>
+                    <li class="separation"><a href="data.html">Data Engineering</a>
                         <ul>
                             <li>Database Administrator (DBA)</li>
                             <li>Data Engineer</li>
@@ -80,7 +80,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="system.html">System Design</a>
+                    <li class="separation"><a href="system.html">System Design</a>
                         <ul>
                             <li>Simulation Engineering</li>
                             <li>System Designer</li>
@@ -88,7 +88,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="general.html">General Research</a>
+                    <li class="separation"><a href="general.html">General Research</a>
                         <ul>
                             <li>If you are planning to do higher studies(MS / PhD)</li>
                         </ul>
