--- a/hardware.html
+++ b/hardware.html
@@ -16,7 +16,7 @@
             <li>
                 <a href="#">Career Paths</a>
                 <ul class="dropdown">
-                    <li><a href="software.html">Software Developer</a>
+                    <li class="separation"><a href="software.html">Software Developer</a>
                         <ul>
                             <li>Software Engineer</li>
                             <li>Backend Engineer</li>
@@ -25,7 +25,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="ai.html">Machine Learning</a>
+                    <li class="separation"><a href="ai.html">Machine Learning</a>
                         <ul>
                             <li>AI Engineering</li>
                             <li>Data Scientist</li>
@@ -35,7 +35,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="cyber.html">Cyber Security</a>
+                    <li class="separation"><a href="cyber.html">Cyber Security</a>
                         <ul>
                             <li>Network Engineer</li>
                             <li>Cyber Security Analyst</li>
@@ -44,7 +44,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="algorithm.html">Algorithms</a>
+                    <li class="separation"><a href="algorithm.html">Algorithms</a>
                         <ul>
                             <li>Algorithm Engineer</li>
                             <li>Theoretical CS Researcher</li>
@@ -54,7 +54,7 @@
                         </ul>
                     </li>
                     
-                    <li><a href="game.html">Game Development</a>
+                    <li class="separation"><a href="game.html">Game Development</a>
                         <ul>
                             <li>Game Developer</li>
                             <li>Grpahics Programmer</li>
@@ -63,7 +63,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="signal.html">Signal Processing</a>
+                    <li class="separation"><a href="signal.html">Signal Processing</a>
                         <ul>
                             <li>DSP Engineer</li>
                             <li>Speech Recognition Engineer</li>
@@ -71,7 +71,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="data.html">Data Engineering</a>
+                    <li class="separation"><a href="data.html">Data Engineering</a>
                         <ul>
                             <li>Database Administrator (DBA)</li>
                             <li>Data Engineer</li>
@@ -79,7 +79,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="system.html">System Design</a>
+                    <li class="separation"><a href="system.html">System Design</a>
                         <ul>
                             <li>Simulation Engineering</li>
                             <li>System Designer</li>
@@ -87,7 +87,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="general.html">General Research</a>
+                    <li class="separation"><a href="general.html">General Research</a>
                         <ul>
                             <li>If you are planning to do higher studies(MS / PhD)</li>
                         </ul>
