--- a/cyber.html
+++ b/cyber.html
@@ -8,7 +8,7 @@
 <body>
 
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="CSS Files/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <!--DropDown-->
     <nav class="navbar">
@@ -17,7 +17,7 @@
             <li>
                 <a href="#">Career Paths</a>
                 <ul class="dropdown">
-                    <li><a href="software.html">Software Developer</a>
+                    <li class="separation"><a href="software.html">Software Developer</a>
                         <ul>
                             <li>Software Engineer</li>
                             <li>Backend Engineer</li>
@@ -26,7 +26,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="ai.html">Machine Learning</a>
+                    <li class="separation"><a href="ai.html">Machine Learning</a>
                         <ul>
                             <li>AI Engineering</li>
                             <li>Data Scientist</li>
@@ -36,7 +36,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="algorithm.html">Algorithms</a>
+                    <li class="separation"><a href="algorithm.html">Algorithms</a>
                         <ul>
                             <li>Algorithm Engineer</li>
                             <li>Theoretical CS Researcher</li>
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="hardware.html">Embedded Systems</a>
+                    <li class="separation"><a href="hardware.html">Embedded Systems</a>
                         <ul>
                             <li>Embedded Systems Engineer</li>
                             <li>IoT Developer</li>
@@ -56,7 +56,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="game.html">Game Development</a>
+                    <li class="separation"><a href="game.html">Game Development</a>
                         <ul>
                             <li>Game Developer</li>
                             <li>Grpahics Programmer</li>
@@ -65,7 +65,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="signal.html">Signal Processing</a>
+                    <li class="separation"><a href="signal.html">Signal Processing</a>
                         <ul>
                             <li>DSP Engineer</li>
                             <li>Speech Recognition Engineer</li>
@@ -73,7 +73,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="data.html">Data Engineering</a>
+                    <li class="separation"> <a href="data.html">Data Engineering</a>
                         <ul>
                             <li>Database Administrator (DBA)</li>
                             <li>Data Engineer</li>
@@ -81,7 +81,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="system.html">System Design</a>
+                    <li class="separation"><a href="system.html">System Design</a>
                         <ul>
                             <li>Simulation Engineering</li>
                             <li>System Designer</li>
@@ -89,16 +89,16 @@
                         </ul>
                     </li>
 
-                    <li><a href="general.html">General Research</a>
+                    <li class="separation"><a href="general.html">General Research</a>
                         <ul>
                             <li>If you are planning to do higher studies(MS / PhD)</li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <li><a href="main.html">Flow Chart</a></li>
         </ul>
     </nav>
+
 
         <div>
         <div class="info">
