software.html changed

--- a/software.html
+++ b/software.html
@@ -74,7 +74,7 @@
                         </ul>
                     </li>
 
-                    <li> class="separation"<a href="data.html">Data Engineering</a>
+                    <li class="separation"><a href="data.html">Data Engineering</a>
                         <ul>
                             <li>Database Administrator (DBA)</li>
                             <li>Data Engineer</li>
