Major changes made
- Color palette changed
- All Html files - each nav bar element got itself a color when the user is in that page
- CSS file edits for buttons (in main and accordion)
- Unnecessary "course needed" block removed from all html career path pages
- JS code snippet added where users can click outside the side panel to cross out of it.
- Close panel button removed
- Slider visibility removed

--- a/ai.html
+++ b/ai.html
@@ -26,6 +26,16 @@
                         </ul>
                     </li>
 
+                    <li class="separation" id="Machine"><a href="#">Machine Learning</a>
+                        <ul>
+                            <li>AI Engineering</li>
+                            <li>Data Scientist</li>
+                            <li>Computer Vision Engineer</li>
+                            <li>NLP Engineer</li>
+                            <li>Research Scientist(AI)</li>
+                        </ul>
+                    </li>
+
                     <li class="separation"><a href="cyber.html">Cyber Security</a>
                         <ul>
                             <li>Network Engineer</li>
@@ -111,29 +121,11 @@
             </div>
 
 
-        <div class="container">
-            <div class="courses">
-                <ul class="course_list">                
-                    <li>CSE 221</li> 
-                    <li>CSE 422</li> 
-                    <li>CSE 424</li> 
-                    <li>CSE 425</li> 
-                    <li>CSE 427</li> 
-                </ul>
-
-                <ul class="elective"> 
-                    <li>CSE 428</li>
-                    <li>CSE 430</li>
-                    <li>CSE 431</li>
-                    <li>CSE 432</li>
-                    <li>CSE 474</li>
-                </ul>
-            </div>
-        </div>
+            <div id="courses-needed"><h1>Courses Needed</h1></div>
         
 
             <link rel="stylesheet" href="CSS Files/accordion.css">
-            <h1 class="Accordion_H">Main Courses</h1>
+            <h2 class="Accordion_H">Main Courses</h2>
             <ul class="accordion">
                 <li>
                     <input type="checkbox" name="accordion" id="first" >
@@ -176,7 +168,7 @@
                 </li>
             </ul>
 
-            <h1 class="Accordion_H">Elective Courses</h1>
+            <h2 class="Accordion_H">Elective Courses</h2>
             <ul class="accordion">
 
                 <li>
