--- a/game.html
+++ b/game.html
@@ -65,6 +65,15 @@
                         </ul>
                     </li>
 
+                    <li class="separation" id="Game"><a href="#">Game Development</a>
+                        <ul>
+                            <li>Game Developer</li>
+                            <li>Grpahics Programmer</li>
+                            <li>UI/UX Designer</li>
+                            <li>Multimedia Developer</li>
+                        </ul>
+                    </li>
+
                     <li class="separation"><a href="signal.html">Signal Processing</a>
                         <ul>
                             <li>DSP Engineer</li>
@@ -110,23 +119,11 @@
             </div>
 
 
-        <div class="container">
-            <div class="courses">
-                <ul class="course_list">
-                    <li>CSE423</li>
-                </ul>
-
-                <ul class="elective"> 
-                    <li>CSE 429</li>
-                    <li>CSE 428</li>
-                    <li>CSE 472</li>
-                </ul>
-            </div>
-        </div>
+            <div id="courses-needed"><h1>Courses Needed</h1></div>
         
 
             <link rel="stylesheet" href="CSS Files/accordion.css">
-            <h1 class="Accordion_H">Main Courses</h1>
+            <h2 class="Accordion_H">Main Courses</h2>
             <ul class="accordion">
                 <li>
                     <input type="checkbox" name="accordion" id="first" >
@@ -138,7 +135,7 @@
 
             </ul>
 
-            <h1 class="Accordion_H">Elective Courses</h1>
+            <h2 class="Accordion_H">Elective Courses</h2>
             <ul class="accordion">
 
                 <li>
