--- a/main.html
+++ b/main.html
@@ -104,6 +104,8 @@
                     </li>
                 </ul>
             </li>
+
+            <li id="FlowChart"><a href="#">Flow Chart</a></li>
         </ul>
     </nav>
 
@@ -158,6 +160,8 @@
         <div class="container">
             <svg id="connections" width="100%" height="100%" style="position:absolute; top:0; left:0; pointer-events:none; z-index:0;"></svg>
 
+            <div class="no-prereq">No Pre-requisites</div>
+
             <div class="course" id="CSE111c">CSE 111</div>
             <div class="course" id="CSE331c">CSE 331</div>
             <div class="course" id="MAT120c">MAT 120</div>
@@ -208,7 +212,7 @@
             
 
     <div id="sidePanel" class="side-panel">
-        <button id="closePanel">X</button>
+        
         <div id="panelContent">
             <h2>Course Info</h2>
             <p>Click a course to view details.</p>
