--- a/signal.html
+++ b/signal.html
@@ -74,6 +74,14 @@
                         </ul>
                     </li>
 
+                    <li class="separation" id="Signal"><a href="#">Signal Processing</a>
+                        <ul>
+                            <li>DSP Engineer</li>
+                            <li>Speech Recognition Engineer</li>
+                            <li>Audio Signal Engineer</li>
+                        </ul>
+                    </li>
+
                     <li class="separation"><a href="data.html">Data Engineering</a>
                         <ul>
                             <li>Database Administrator (DBA)</li>
@@ -82,7 +90,7 @@
                         </ul>
                     </li>
 
-                    <li class="separation"> <a href="system.html">System Design</a>
+                    <li class="separation"><a href="system.html">System Design</a>
                         <ul>
                             <li>Simulation Engineering</li>
                             <li>System Designer</li>
@@ -90,7 +98,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="general.html">General Research</a>
+                    <li class="separation"><a href="general.html">General Research</a>
                         <ul>
                             <li>If you are planning to do higher studies(MS / PhD)</li>
                         </ul>
@@ -111,23 +119,11 @@
             </div>
 
 
-        <div class="container">
-            <div class="courses">
-                <ul class="course_list">          
-                    <li>CSE 392</li> 
-                </ul>
-
-                <ul class="elective">             
-                    <li>CSE 430</li>
-                    <li>CSE 431</li>
-                    <li>CSE 432</li>
-                </ul>
-            </div>
-        </div>
+            <div id="courses-needed"><h1>Courses Needed</h1></div>
         
 
             <link rel="stylesheet" href="CSS Files/accordion.css">
-            <h1 class="Accordion_H">Main Courses</h1>
+            <h2 class="Accordion_H">Main Courses</h2>
             <ul class="accordion">
                 <li>
                     <input type="checkbox" name="accordion" id="first" >
@@ -138,7 +134,7 @@
                 </li>
             </ul>
 
-            <h1 class="Accordion_H">Elective Courses</h1>
+            <h2 class="Accordion_H">Elective Courses</h2>
             <ul class="accordion">
 
                 <li>
