--- a/algorithm.html
+++ b/algorithm.html
@@ -45,6 +45,16 @@
                         </ul>
                     </li>
 
+                    <li class="separation" id="Algorithm"><a href="#">Algorithms</a>
+                        <ul>
+                            <li>Algorithm Engineer</li>
+                            <li>Theoretical CS Researcher</li>
+                            <li>Competitive Programmer</li>
+                            <li>University Lecturer</li>
+                            <li>Compiler Engineer</li>
+                        </ul>
+                    </li>
+
                     <li class="separation"><a href="hardware.html">Embedded Systems</a>
                         <ul>
                             <li>Embedded Systems Engineer</li>
@@ -112,26 +122,10 @@
             </div>
 
 
-        <div class="container">
-            <div class="courses">
-                <ul class="course_list">              
-                    <li>CSE 221</li> 
-                    <li>CSE 230</li> 
-                    <li>CSE 331</li> 
-                    <li>CSE 420</li> 
-                </ul>
-
-                <ul class="elective">                    
-                    <li>CSE 424</li>
-                    <li>CSE 426</li>
-                    <li>CSE 427</li>
-                </ul>
-            </div>
-        </div>
-        
+            <div id="courses-needed"><h1>Courses Needed</h1></div>
 
             <link rel="stylesheet" href="CSS Files/accordion.css">
-            <h1 class="Accordion_H">Main Courses</h1>
+            <h2 class="Accordion_H">Main Courses</h2>
             <ul class="accordion">
                 <li>
                     <input type="checkbox" name="accordion" id="first" >
@@ -166,7 +160,7 @@
                 </li>
             </ul>
 
-            <h1 class="Accordion_H">Elective Courses</h1>
+            <h2 class="Accordion_H">Elective Courses</h2>
             <ul class="accordion">
 
                 <li>
