--- a/cyber.html
+++ b/cyber.html
@@ -36,6 +36,15 @@
                         </ul>
                     </li>
 
+                    <li class="separation" id="Cyber"><a href="#">Cyber Security</a>
+                        <ul>
+                            <li>Network Engineer</li>
+                            <li>Cyber Security Analyst</li>
+                            <li>Network Administrator</li>
+                            <li>Cloud Infrastructure Engineer</li>
+                        </ul>
+                    </li>
+
                     <li class="separation"><a href="algorithm.html">Algorithms</a>
                         <ul>
                             <li>Algorithm Engineer</li>
@@ -96,6 +105,8 @@
                     </li>
                 </ul>
             </li>
+
+            <li><a href="main.html">Flow Chart</a></li>
         </ul>
     </nav>
 
@@ -113,23 +124,11 @@
             </div>
 
 
-        <div class="container">
-            <div class="courses">
-                <ul class="course_list">             
-                    <li>CSE 320</li> 
-                    <li>CSE 421</li> 
-                </ul>
-
-                <ul class="elective"> 
-                    <li>CSE 462</li>
-                    <li>CSE 490</li>
-                </ul>
-            </div>
-        </div>
+            <div id="courses-needed"><h1>Courses Needed</h1></div>
         
 
             <link rel="stylesheet" href="CSS Files/accordion.css">
-            <h1 class="Accordion_H">Main Courses</h1>
+            <h2 class="Accordion_H">Main Courses</h2>
             <ul class="accordion">
                 <li>
                     <input type="checkbox" name="accordion" id="first" >
@@ -148,7 +147,7 @@
                 </li>
             </ul>
 
-            <h1 class="Accordion_H">Elective Courses</h1>
+            <h2 class="Accordion_H">Elective Courses</h2>
             <ul class="accordion">
 
                 <li>
