--- a/general.html
+++ b/general.html
@@ -97,6 +97,12 @@
                             <li>Business Analyst</li>
                         </ul>
                     </li>
+
+                    <li class="separation" id="General"><a href="#">General Research</a>
+                        <ul>
+                            <li>If you are planning to do higher studies(MS / PhD)</li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
             <li><a href="main.html">Flow Chart</a></li>
@@ -113,28 +119,11 @@
             </div>
 
 
-        <div class="container">
-            <div class="courses">
-
-                <ul class="elective"> 
-                   
-
-                    <li>CSE 424</li>
-                    <li>CSE 425</li>
-                    <li>CSE 426</li>
-                    <li>CSE 427</li>
-                    <li>CSE 428</li>
-                    <li>CSE 430</li>
-                    <li>CSE 431</li>
-                    <li>CSE 474</li>
-                    <li>CSE 491</li>
-                </ul>
-            </div>
-        </div>
+        <div id="courses-needed"><h1>Courses Needed</h1></div>
         
         <link rel="stylesheet" href="CSS Files/accordion.css">
 
-            <h1 class="Accordion_H">Elective Courses</h1>
+            <h2 class="Accordion_H">Elective Courses</h2>
             <ul class="accordion">
 
                 <li>
