--- a/system.html
+++ b/system.html
@@ -90,6 +90,14 @@
                         </ul>
                     </li>
 
+                    <li class="separation" id="System"><a href="#">System Design</a>
+                        <ul>
+                            <li>Simulation Engineering</li>
+                            <li>System Designer</li>
+                            <li>Business Analyst</li>
+                        </ul>
+                    </li>
+
                     <li class="separation"><a href="general.html">General Research</a>
                         <ul>
                             <li>If you are planning to do higher studies(MS / PhD)</li>
@@ -112,23 +120,10 @@
             </div>
 
 
-        <div class="container">
-            <div class="courses">
-                <ul class="course_list">
-                    <li>CSE 470</li> 
-                    <li>CSE 471</li> 
-                </ul>
-
-                <ul class="elective"> 
-                    <li>CSE 474</li>
-                    <li>CSE 473</li>
-                </ul>
-            </div>
-        </div>
-        
+            <div id="courses-needed"><h1>Courses Needed</h1></div>
 
             <link rel="stylesheet" href="CSS Files/accordion.css">
-            <h1 class="Accordion_H">Main Courses</h1>
+            <h2 class="Accordion_H">Main Courses</h2>
             <ul class="accordion">
                 <li>
                     <input type="checkbox" name="accordion" id="first" >
@@ -147,7 +142,7 @@
                 </li>
             </ul>
 
-            <h1 class="Accordion_H">Elective Courses</h1>
+            <h2 class="Accordion_H">Elective Courses</h2>
             <ul class="accordion">
 
                 <li>
