Diff screen size optimizatio

--- a/main.html
+++ b/main.html
@@ -111,10 +111,6 @@
 
 
 
-    <div class="titleh">
-        <h1>Welcome to the CS info panel</h1>
-    </div>
-
     <div class="main_course">
         <h2>Main Course</h2>
         <p><i><b>note -</b> read from top to bottom</i></p>
@@ -218,7 +214,10 @@
             <p>Click a course to view details.</p>
         </div>
     </div>
-    <div class="bottom_bar"></div>
-    <script type="module" src="JS File/panel.js"></script>
+
+    <div class="bottom_bar">
+        
+    </div>
+    <script type="module" src="JS File/Main.js"></script>
 </body>
 </html>
